# actix_sam

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
.github/workflows/: audit.yaml  general.yaml
lambda_actix_adapter/: Cargo.toml
lambda_actix_adapter/src/: lib.rs
lambda_web/src/: actix4.rs
sam/: deploy_agent_role.json  template.yaml
src/: lib.rs  main.rs  startup.rs
src/domain/: error_response.rs  mod.rs  subscriber_email.rs  subscriber_exposed.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
src/settings/: base.yaml  local.yaml  mod.rs
src/telemetry/: mod.rs
tests/: health_check.rs
