[package]
name = "actix_sam"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bootstrap"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13"
once_cell = "1"
serde = { version="1", features = ["derive"] }
serde_json = "1.0.91"

tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"

unicode-segmentation = "1"
uuid = { version="1", features= ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
validator = "0.16"
lambda-web = { version = "0.2.0", features=["actix4"] }

[dev-dependencies]
tokio = { version= "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
fake = "2.5.0"
